<resources>
    <string name="app_name">NeWork</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="button_new_post">new post</string>
    <string name="button_new_event">new event</string>
    <string name="author_avatar_image">author avatar</string>
    <string name="text_post">Привет, друзья! Хочу поделиться с вами своими мыслями о том, что для меня означает быть профессиональным писателем. Эта профессия - это не только способ заработка, но и настоящее призвание, к которому я стремился многие годы. Каждый новый текст - это возможность выразить свои мысли, эмоции и вдохнуть жизнь в созданных персонажей. Я готов обмениваться опытом и учиться у талантливых коллег, искренне благодарен всем моим читателям за поддержку и вдохновение!</string>
    <string name="image_content">image content</string>
    <string name="button_like">like</string>
    <string name="button_share">share</string>
    <string name="menu_option">menu option</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="passwords_dont_match">passwords don\'t match</string>
    <string name="the_user_is_already_registered">The user is already registered</string>
    <string name="incorrect_photo_format">Incorrect photo format</string>
    <string name="unknown_error">Unknown error</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_unregistered">User is unregistered</string>
    <string name="user">user</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="preview">preview</string>
    <string name="remove">remove</string>
    <string name="empty_login">Empty login</string>
    <string name="empty_password">Empty password</string>
    <string name="passwords_is_empty">Password is empty</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="post">Post</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="event">Event</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="connection_error">Connection error</string>
    <string name="select_date">Select date</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="present_time">PT</string>
    <string name="empty_field">Empty field</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="enter_dates">Enter dates</string>
    <string name="icon_calendar">icon calendar</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="end_date">End date</string>
    <string name="button_new_job">Button new job</string>
    <string name="whats_is_event">Whats is event?</string>
    <string name="button_add_photo">button add photo</string>
    <string name="button_add_file">button add file</string>
    <string name="button_add_user">button add user</string>
    <string name="button_add_location">button add location</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="date_start">date start</string>
    <string name="dash">-</string>
    <string name="date_finish">date finish</string>
    <string name="create">Create</string>
    <string name="whats_news">Whats news?</string>
    <string name="in_search_work">In search work</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="attachment_15MB"><![CDATA[attachment > 15MB]]></string>
</resources>