<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.dialog.BottomSheetNewEvent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/dragHandle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:hint="@string/date"
            app:endIconDrawable="@drawable/ic_today_24"
            app:endIconMode="custom"
            app:helperText="MM/dd/yyyy HH:mm"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toTopOf="@id/dragHandle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="48dp"
            android:checkedButton="@+id/radio_button_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <RadioButton
                android:id="@+id/radioButtonOnline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/online" />

            <RadioButton
                android:id="@+id/radioButtonOffline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/offline" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>