<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/author_avatar_image"
                android:src="@drawable/ic_account_circle_24"
                app:layout_constraintBottom_toTopOf="@id/barrierTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@id/datePublication"
                app:layout_constraintEnd_toStartOf="@id/buttonOption"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Author name" />

            <TextView
                android:id="@+id/datePublication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintStart_toStartOf="@id/authorName"
                app:layout_constraintTop_toBottomOf="@id/authorName"
                tools:text="02.02.2024" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOption"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/menu_option"
                app:icon="@drawable/ic_more_vert_24"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/avatar" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="avatar,datePublication, buttonOption" />

            <ImageView
                android:id="@+id/imageContent"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/image_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/barrierTop" />

            <androidx.media3.ui.PlayerView
                android:id="@+id/videoContent"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/barrierTop" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="imageContent, videoContent" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/barrierBottom"
                tools:text="@string/text_post" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLike"
                style="@style/Widget.AppTheme.LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:checkable="true"
                android:contentDescription="@string/button_like"
                app:icon="@drawable/selector_like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShare"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/button_share"
                app:icon="@drawable/ic_share_24"
                app:layout_constraintBottom_toBottomOf="@id/buttonLike"
                app:layout_constraintStart_toEndOf="@id/buttonLike"
                app:layout_constraintTop_toTopOf="@id/buttonLike" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</FrameLayout>